--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -16593,10 +16593,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>season</th>\n",
+       "      <th>city</th>\n",
+       "      <th>date</th>\n",
+       "      <th>team1</th>\n",
+       "      <th>team2</th>\n",
+       "      <th>toss_winner</th>\n",
+       "      <th>toss_decision</th>\n",
+       "      <th>result</th>\n",
+       "      <th>dl_applied</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>win_by_runs</th>\n",
+       "      <th>win_by_wickets</th>\n",
+       "      <th>player_of_match</th>\n",
+       "      <th>venue</th>\n",
+       "      <th>umpire1</th>\n",
+       "      <th>umpire2</th>\n",
+       "      <th>umpire3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Hyderabad</td>\n",
+       "      <td>2017-04-05</td>\n",
+       "      <td>Sunrisers Hyderabad</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>field</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Sunrisers Hyderabad</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yuvraj Singh</td>\n",
+       "      <td>Rajiv Gandhi International Stadium, Uppal</td>\n",
+       "      <td>AY Dandekar</td>\n",
+       "      <td>NJ Llong</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Pune</td>\n",
+       "      <td>2017-04-06</td>\n",
+       "      <td>Mumbai Indians</td>\n",
+       "      <td>Rising Pune Supergiant</td>\n",
+       "      <td>Rising Pune Supergiant</td>\n",
+       "      <td>field</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Rising Pune Supergiant</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>SPD Smith</td>\n",
+       "      <td>Maharashtra Cricket Association Stadium</td>\n",
+       "      <td>A Nand Kishore</td>\n",
+       "      <td>S Ravi</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Rajkot</td>\n",
+       "      <td>2017-04-07</td>\n",
+       "      <td>Gujarat Lions</td>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>field</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kolkata Knight Riders</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>CA Lynn</td>\n",
+       "      <td>Saurashtra Cricket Association Stadium</td>\n",
+       "      <td>Nitin Menon</td>\n",
+       "      <td>CK Nandan</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Indore</td>\n",
+       "      <td>2017-04-08</td>\n",
+       "      <td>Rising Pune Supergiant</td>\n",
+       "      <td>Kings XI Punjab</td>\n",
+       "      <td>Kings XI Punjab</td>\n",
+       "      <td>field</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Kings XI Punjab</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>GJ Maxwell</td>\n",
+       "      <td>Holkar Cricket Stadium</td>\n",
+       "      <td>AK Chaudhary</td>\n",
+       "      <td>C Shamshuddin</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>2017-04-08</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>Delhi Daredevils</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>bat</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Royal Challengers Bangalore</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>KM Jadhav</td>\n",
+       "      <td>M Chinnaswamy Stadium</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  season       city        date                        team1  \\\n",
+       "0   1    2017  Hyderabad  2017-04-05          Sunrisers Hyderabad   \n",
+       "1   2    2017       Pune  2017-04-06               Mumbai Indians   \n",
+       "2   3    2017     Rajkot  2017-04-07                Gujarat Lions   \n",
+       "3   4    2017     Indore  2017-04-08       Rising Pune Supergiant   \n",
+       "4   5    2017  Bangalore  2017-04-08  Royal Challengers Bangalore   \n",
+       "\n",
+       "                         team2                  toss_winner toss_decision  \\\n",
+       "0  Royal Challengers Bangalore  Royal Challengers Bangalore         field   \n",
+       "1       Rising Pune Supergiant       Rising Pune Supergiant         field   \n",
+       "2        Kolkata Knight Riders        Kolkata Knight Riders         field   \n",
+       "3              Kings XI Punjab              Kings XI Punjab         field   \n",
+       "4             Delhi Daredevils  Royal Challengers Bangalore           bat   \n",
+       "\n",
+       "   result  dl_applied                       winner  win_by_runs  \\\n",
+       "0  normal           0          Sunrisers Hyderabad           35   \n",
+       "1  normal           0       Rising Pune Supergiant            0   \n",
+       "2  normal           0        Kolkata Knight Riders            0   \n",
+       "3  normal           0              Kings XI Punjab            0   \n",
+       "4  normal           0  Royal Challengers Bangalore           15   \n",
+       "\n",
+       "   win_by_wickets player_of_match                                      venue  \\\n",
+       "0               0    Yuvraj Singh  Rajiv Gandhi International Stadium, Uppal   \n",
+       "1               7       SPD Smith    Maharashtra Cricket Association Stadium   \n",
+       "2              10         CA Lynn     Saurashtra Cricket Association Stadium   \n",
+       "3               6      GJ Maxwell                     Holkar Cricket Stadium   \n",
+       "4               0       KM Jadhav                      M Chinnaswamy Stadium   \n",
+       "\n",
+       "          umpire1        umpire2 umpire3  \n",
+       "0     AY Dandekar       NJ Llong     NaN  \n",
+       "1  A Nand Kishore         S Ravi     NaN  \n",
+       "2     Nitin Menon      CK Nandan     NaN  \n",
+       "3    AK Chaudhary  C Shamshuddin     NaN  \n",
+       "4             NaN            NaN     NaN  "
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dataset \n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Information about the data**\n",
+    "\n",
+    "The given data is all about the IPL matches and in total there are 756 rows which hold different informaion and 18 different columns. Let's explore each and every column to set some insite from it in general:\n",
+    "\n",
+    "1. id --> It is the serial number given to the data\n",
+    "2. season --> The season column will represent the year in which the match was played\n",
+    "3. city --> The column city represent in which city the match was played.\n",
+    "4. team1 and team2 --> They are the teams upon which the match was played.\n",
+    "5. toss winner --> This column holds the information about which team has win the toss\n",
+    "6. toss decission --> This column will hold the information about the team who won the toss will choose to bat first or bol first.\n",
+    "7. result --> This column will hold the information about which team will won the match.\n",
+    "8. dl_applied --> For which team dose DL method is applied.\n",
+    "\n",
+    "{The Duckworth–Lewis–Stern method (DLS) is a mathematical formulation designed to calculate the target score for the team batting second in a limited overs cricket match interrupted by weather or other circumstances.}\n",
+    "\n",
+    "9. winner --> The column will specify which team has won the match.\n",
+    "10. win by runs --> The winning team has won by how many runs\n",
+    "11. win by wickets --> The winning team has won by how many wickets.\n",
+    "12. player of match --> This column is based on the winner column and the player of the match will be selected from the winner team and this column will represent this information only.\n",
+    "13. venue --> It represent the location or name of the stadium in which the match was played.\n",
+    "14. umpire1,umpire2,umpire3 --> This columns represent the infromation about the umpire that are in the match weather umpire1 represent the straight umpire and umpire2 represent the leg umpire and the umpire3 is the third umpire and this umpire make most of the difficult decision durning the matchs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Thank you"
+   ]
   }
  ],
  "metadata": {
