--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -7385,22 +7385,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Mumbai Indians'"
+       "Chennai Super Kings    8\n",
+       "Mumbai Indians         8\n",
+       "Name: toss_winner, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csk_vs_mi[\"toss_winner\"].max()"
+    "csk_vs_mi[\"toss_winner\"].value_counts()"
    ]
   },
   {
