--- a/IPL Analysis.ipynb
+++ b/IPL Analysis.ipynb
@@ -16827,6 +16827,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Summary\n",
+    "\n",
+    "From all the above plots we can see the following:\n",
+    "\n",
+    "* MI won most of the IPL matches\n",
+    "* Krish gale was awardwd most of the time as man of the match\n",
+    "* Most of the matches played in feroza kotela ground\n",
+    "* After winning the toss most of the team decided to field first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Thank you"
    ]
   }
